--- a/25-chromeos.conf
+++ b/25-chromeos.conf
@@ -3,36 +3,60 @@
 <fontconfig>
 	<!-- Set up fonts as per ChromeOS. -->
 
-	<!-- http://uwstopia.nl/blog/2007/05/free-your-fonts) -->
+	<!-- http://uwstopia.nl/blog/2007/05/free-your-fonts -->
 
-	<match target="pattern">
-		<test qual="any" name="family"><string>Times New Roman</string></test>
-		<edit name="family" mode="assign"><string>Tinos</string></edit>
+	<match target="pattern" name="family">
+		<test name="family" qual="any">
+			<string>Times New Roman</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Tinos</string>
+		</edit>
 	</match>
-	<match target="pattern">
-		<test qual="any" name="family"><string>Arial</string></test>
-		<edit name="family" mode="assign"><string>Arimo</string></edit>
+	<match target="pattern" name="family">
+		<test name="family" qual="any">
+			<string>Arial</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Arimo</string>
+		</edit>
 	</match>
-	<match target="pattern">
-		<test qual="any" name="family"><string>Courier New</string></test>
-		<edit name="family" mode="assign"><string>Cousine</string></edit>
+	<match target="pattern" name="family">
+		<test name="family" qual="any">
+			<string>Courier New</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>Cousine</string>
+		</edit>
 	</match>
-	<alias> 
-		<family>serif</family> 
-		<prefer> 
-			<family>Tinos</family> 
-		</prefer> 
-	</alias> 
-	<alias> 
-		<family>sans-serif</family> 
-		<prefer> 
-			<family>Arimo</family> 
-		</prefer> 
-	</alias> 
-	<alias> 
-		<family>monospace</family> 
-		<prefer> 
-			<family>Cousine</family> 
-		</prefer> 
+
+	<alias>
+		<family>sans</family>
+		<prefer>
+			<family>Arimo</family>
+		</prefer>
 	</alias>
+
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Arimo</family>
+		</prefer>
+	</alias>
+
+
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>Tinos</family>
+		</prefer>
+	</alias>
+
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Cousine</family>
+		</prefer>
+	</alias>
+	
 </fontconfig>
