--- a/.conkyrc
+++ b/.conkyrc
@@ -26,6 +26,7 @@
 own_window_transparent yes
 own_window_argb_visual yes
 own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
+own_window_type root
 double_buffer yes
 use_xft yes
 xftfont Droid Sans Mono:size=12
@@ -53,7 +54,6 @@ out_to_stderr no
 extra_newline no
 own_window yes
 own_window_class Conky
-own_window_type desktop
 stippled_borders 0
 update_interval 1.0
 uppercase no
