--- a/.conkyrc
+++ b/.conkyrc
@@ -23,14 +23,13 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-own_window_transparent yes
+own_window_argb_value 200
 own_window_argb_visual yes
 own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
-own_window_type root
 double_buffer yes
 use_xft yes
 xftfont Droid Sans Mono:size=12
-alignment bottom_right
+alignment top_right
 format_human_readable yes
 mpd_host localhost
 mpd_port 6600
