--- a/.conkyrc
+++ b/.conkyrc
@@ -75,4 +75,4 @@ $hr
 File systems:
  / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
 Networking:
-Up:$color ${upspeed eth0} - Down:$color ${downspeed eth0}
+Up:$color ${upspeed wlan0} - Down:$color ${downspeed wlan0}
