--- a/.xmobarrc
+++ b/.xmobarrc
@@ -3,8 +3,16 @@ Config { font = "xft:Droid Sans-10"
        , fgColor = "grey"
        , position = Top
        , lowerOnStart = True
-       , commands = [ Run StdinReader ] 
+       , commands = [ Run StdinReader
+	       , Run MultiCpu [] 10
+		   , Run Memory [] 10
+		   , Run Swap [] 10
+		   , Run Network "wlan0" [] 10
+		   , Run Battery [] 10
+		   , Run CpuFreq [] 10
+		
+	   ] 
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader%"
+       , template = "%StdinReader% } { %multicpu% | %memory% | %swap% | %wlan0% | %battery% | %cpufreq%"
        }
