--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,7 +1,7 @@
 Config { font = "xft:Droid Sans-10"
        , bgColor = "black"
        , fgColor = "grey"
-       , position = Top
+       , position = TopW L 90
        , lowerOnStart = True
        , commands = [ Run StdinReader
 	       , Run MultiCpu [] 10
@@ -10,9 +10,9 @@ Config { font = "xft:Droid Sans-10"
 		   , Run Network "wlan0" [] 10
 		   , Run Battery [] 10
 		   , Run CpuFreq [] 10
-		
+           , Run Date "%a %b %_d %l:%M" "date" 10
 	   ] 
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% } { %multicpu% | %memory% | %swap% | %wlan0% | %battery% | %cpufreq%"
+       , template = "%StdinReader% } { %multicpu% | %memory% | %swap% | %wlan0% | %battery% | %cpufreq% | <fc=#ee9a00>%date%</fc> "
        }
