--- a/.fonts.conf
+++ b/.fonts.conf
@@ -37,4 +37,24 @@
 			</edit>
 		</match>
 	</match>
+	<match target="font">
+		<edit mode="assign" name="rgba">
+			<const>rgb</const>
+		</edit>
+	</match>
+	<match target="font">
+		<edit mode="assign" name="hinting">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<edit mode="assign" name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+	</match>
+	<match target="font">
+		<edit mode="assign" name="antialias">
+			<bool>true</bool>
+		</edit>
+	</match>
 </fontconfig>
