--- a/.stalonetrayrc
+++ b/.stalonetrayrc
@@ -13,7 +13,7 @@
 
 # background <color>         # color can be specified as an HTML hex triplet or
                              # as a name from rgb.txt, note that '#' must be quoted
-background "#777777"
+background black
 
 # decorations <decspec>      # set trays window decorations; possible values for
                              # decspec are: all, title, border, none
@@ -76,7 +76,7 @@ no_shrink true
 
 # parent_bg [<bool>]         # whether to use pseudo-transparency 
                              # (looks better when reparented into smth like FvwmButtons)
-parent_bg true
+parent_bg false
 
 # pixmap_bg <path_to_xpm>    # use pixmap from specified xpm file for (tiled) background
 # pixmap_bg /home/user/.stalonetraybg.xpm
