--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 	path = .vim/bundle/bufexplorer
 	url = https://github.com/c9s/bufexplorer
 
+[submodule ".vim/bundle/ack"]
+	path = .vim/bundle/ack
+	url = https://github.com/mileszs/ack.vim.git
