Source Pro fonts are slightly hinted

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -55,4 +55,15 @@
 			<const>hintfull</const>
 		</edit>
 	</match>
+	<!-- Adobe's specifically should not be -->
+	<match target="font">
+		<test name="family">
+			<string>Source Sans Pro</string>
+			<string>Source Code Pro</string>
+		</test>
+		<edit mode="assign" name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+	</match>
 </fontconfig>
+
