--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "misc_submodules/dircolors-solarized"]
 	path = misc_submodules/dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized.git
+[submodule ".vim/bundle/rainbow_parentheses"]
+	path = .vim/bundle/rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim
