Certain entries commented out in fonts.conf

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,7 +1,12 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
+
 	<match target="font">
+
+		<!-- Commenting these out; I set them in the theme. -->
+
+		<!--
 		<edit mode="assign" name="antialias">
 			<bool>true</bool>
 		</edit>
@@ -12,6 +17,7 @@
 		<edit mode="assign" name="hintstyle">
 			<const>hintslight</const>
 		</edit>
+		-->
 
 		<!-- Ignore any embedded bitmaps in TTF, etc (Microsoft's Calibri and others from Office 07/Vista have these) -->
 		<edit mode="assign" name="embeddedbitmap">
