We use vim-colors-solarized from the main repository

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -24,6 +24,25 @@
 			<bool>false</bool>
 		</edit>
 
+		<alias>
+			<family>serif</family>
+			<prefer>
+				<family>Gentium Plus</family>
+			</prefer>
+		</alias>
+		<alias>
+			<family>sans-serif</family>
+			<prefer>
+				<family>Source Sans Pro</family>
+			</prefer>
+		</alias>
+		<alias>
+			<family>monospace</family>
+			<prefer>
+				<family>Source Code Pro</family>
+			</prefer>
+		</alias>
+
 		<!-- MS fonts use full hinting -->
 
 		<test name="family">
