--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -4,7 +4,10 @@ glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 vsync = "opengl-swc";
 
-menu-opacity = 0.9;
-frame-opacity = 0.9;
+menu-opacity = 0.8;
+frame-opacity = 0.8;
 
 shadow = true
+
+# Add own_window_class Conky to conkyrc
+shadow-exclude = "class_g = 'Conky'";
