--- a/.vim/bundle/.gitignore
+++ b/.vim/bundle/.gitignore
@@ -1,2 +1,8 @@
-!.gitignore
-!vundle
+Command-T
+YouCompleteMe
+molokai
+rainbow_parentheses.vim
+syntastic
+ultisnips
+vim-fugitive
+vim-virtualenv
