Switching terminal and fm to xterm and ranger.

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,11 +2,8 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
 
-	<match target="font">
+	<match target="font">`
 
-		<!-- Commenting these out; I set them in the theme. -->
-
-		<!--
 		<edit mode="assign" name="antialias">
 			<bool>true</bool>
 		</edit>
@@ -17,7 +14,6 @@
 		<edit mode="assign" name="hintstyle">
 			<const>hintslight</const>
 		</edit>
-		-->
 
 		<!-- Ignore any embedded bitmaps in TTF, etc (Microsoft's Calibri and others from Office 07/Vista have these) -->
 		<edit mode="assign" name="embeddedbitmap">
@@ -33,13 +29,13 @@
 		<alias>
 			<family>sans-serif</family>
 			<prefer>
-				<family>Source Sans Pro</family>
+				<family>Fira Sans</family>
 			</prefer>
 		</alias>
 		<alias>
 			<family>monospace</family>
 			<prefer>
-				<family>Source Code Pro</family>
+				<family>Fira Mono</family>
 			</prefer>
 		</alias>
 
