--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,6 @@
 set -s escape-time 0
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux"
+run-shell "powerline-daemon -q"
+source ~/.local/lib64/python3.5/site-packages/powerline/bindings/tmux/powerline.conf
+
+
