--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -35,7 +35,7 @@
 		<alias>
 			<family>monospace</family>
 			<prefer>
-				<family>Fira Mono</family>
+				<family>FuraMonoForPowerline Nerd Font</family>
 			</prefer>
 		</alias>
 
