--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,3 @@
-set -g default-terminal "tmux-256color"
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+
