--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,9 @@
 [submodule ".vim/pack/dugan/start/dracula-theme"]
 	path = .vim/pack/dugan/start/dracula-theme
 	url = https://github.com/dracula/vim
+[submodule ".vim/pack/dugan/start/onedark.vim"]
+	path = .vim/pack/dugan/start/onedark.vim
+	url = https://github.com/joshdick/onedark.vim.git
+[submodule ".vim/pack/dugan/start/lightline-onedark"]
+	path = .vim/pack/dugan/start/lightline-onedark
+	url = https://github.com/NovaDev94/lightline-onedark.git
