--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,3 @@
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "screen-256color"
+set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc'
+set -g default-terminal "tmux-256color"
 
