.tmux.conf updated

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
-set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc'
+# Works with iTerm2 after prepping it with this:
+# https://alexpearce.me/2014/05/italics-in-iterm2-vim-tmux/
+set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
 set -g default-terminal "tmux-256color"
 
