.tmux.conf mouse support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,4 +2,5 @@
 # https://alexpearce.me/2014/05/italics-in-iterm2-vim-tmux/
 set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
 set -g default-terminal "tmux-256color"
+set -g mouse on
 
