--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,12 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+run '~/.tmux/plugins/tpm/tpm'
+
 # Works with iTerm2 after prepping it with this:
 # https://alexpearce.me/2014/05/italics-in-iterm2-vim-tmux/
 set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
