--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,81 +5,13 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'jimeh/tmux-themepack'
 
 # Works with iTerm2 after prepping it with this:
 # https://alexpearce.me/2014/05/italics-in-iterm2-vim-tmux/
 set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
 
 set -g default-terminal "tmux-256color"
-set -g mouse on
-
-# "basic" theme from here:
-# https://github.com/jimeh/tmux-themepack/blob/master/basic.tmuxtheme
-
-# Status update interval
-set -g status-interval 1
-
-# Basic status bar colors
-set -g status-bg black
-set -g status-fg cyan
-
-# Left side of status bar
-set -g status-left-bg black
-set -g status-left-fg green
-set -g status-left-length 40
-set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
-
-# Right side of status bar
-set -g status-right-bg black
-set -g status-right-fg cyan
-set -g status-right-length 40
-set -g status-right "#H #[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
-
-# Window status
-set -g window-status-format " #I:#W#F "
-set -g window-status-current-format " #I:#W#F "
-
-# Current window status
-set -g window-status-current-bg red
-set -g window-status-current-fg black
-
-# Window with activity status
-set -g window-status-activity-bg yellow # fg and bg are flipped here due to a
-set -g window-status-activity-fg black  # bug in tmux
-
-# Window separator
-set -g window-status-separator ""
-
-# Window status alignment
-set -g status-justify centre
-
-# Pane border
-set -g pane-border-bg default
-set -g pane-border-fg default
-
-# Active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg green
-
-# Pane number indicator
-set -g display-panes-colour default
-set -g display-panes-active-colour default
-
-# Clock mode
-set -g clock-mode-colour red
-set -g clock-mode-style 24
-
-# Message
-set -g message-bg default
-set -g message-fg default
-
-# Command message
-set -g message-command-bg default
-set -g message-command-fg default
-
-# Mode
-set -g mode-bg red
-set -g mode-fg default
 
 run '~/.tmux/plugins/tpm/tpm'
 
