--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,5 +13,15 @@ set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xt
 
 set -g default-terminal "tmux-256color"
 
+# The default keybindings conflict with Mission Control.
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+bind-key -r h resize-pane -L
+bind-key -r j resize-pane -D
+bind-key -r k resize-pane -U
+bind-key -r l resize-pane -R
+
 run '~/.tmux/plugins/tpm/tpm'
 
