Update dosbox config

--- a/.dosbox/dosbox-0.74.conf
+++ b/.dosbox/dosbox-0.74.conf
@@ -9,8 +9,8 @@ output=openglnb
 [render]
 
 aspect=true
-scaler=hq3x
 
 [midi]
 
+# This is where FluidSynth and TiMidity++ would be
 midiconfig=128:0
