TMux supports truecolor

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,3 +93,5 @@ set -g mode-fg default
 
 run '~/.tmux/plugins/tpm/tpm'
 
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
