Add capital resizing keys to tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,8 @@ bind -r h resize-pane -L 1
 bind -r j resize-pane -D 1
 bind -r k resize-pane -U 1
 bind -r l resize-pane -R 1
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
