--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,4 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 if-shell 'test $(uname) = "Linux"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"'
+if-shell 'test $(uname) = "Darwin"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
