--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,7 @@ bind -r L resize-pane -R 5
 
 if-shell -b 'test $(uname) = "Linux"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"'
 if-shell -b 'test $(uname) = "Darwin"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+
+set-option -g base-index 1
+
+
