--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,9 +40,10 @@ setw -g window-status-current-bg "#282a2e"
 setw -g window-status-current-fg "#81a2be"
 
 ## highlight active window
-setw -g window-style 'bg=#282a2e'
-setw -g window-active-style 'bg=#1d1f21'
-setw -g pane-active-border-style ''
+# This is commented out because I want a transparent background
+# setw -g window-style 'bg=#282a2e'
+# setw -g window-active-style 'bg=#1d1f21'
+# setw -g pane-active-border-style ''
 
 ## highlight activity in status bar
 setw -g window-status-activity-fg "#8abeb7"
