--- a/.config/fontconfig/conf.d/10-local.conf
+++ b/.config/fontconfig/conf.d/10-local.conf
@@ -5,15 +5,24 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Noto Sans</family>
+      <family>Roboto</family>
     </prefer>
   </alias>
 
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Hack Nerd Font</family>
+      <family>RobotoMono Nerd Font</family>
     </prefer>
   </alias>
+
+  <match>
+    <test name="family">
+      <string>Roboto</string>
+    </test>
+    <edit name="style" mode="assign">
+      <string>Regular</string>
+    </edit>
+  </match>
 
 </fontconfig>
