--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -8,15 +8,17 @@
 ;=====================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
+; https://www.reddit.com/r/unixporn/comments/5w4la5/i3gaps_polybar_minimal_arcdarker/de7a6fd
+; http://ix.io/nLJ
+background = #2f343f
+;background = #ee2f343f
+background-alt = #f72f343f
+foreground = #f3f4f5
+foreground-alt = #f3f4f5
+foreground-dim = #676e7d
 primary = #ffb52a
 secondary = #e60053
-alert = #bd2c40
+alert = #ff6600
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
