Return to using mostly tpm plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,9 @@
 set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc'
 set-option -g default-terminal "tmux-256color"
 
-bind -r h resize-pane -L 1
-bind -r j resize-pane -D 1
-bind -r k resize-pane -U 1
-bind -r l resize-pane -R 1
-
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-if-shell -b 'test $(uname) = "Linux"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"'
-if-shell -b 'test $(uname) = "Darwin"' 'bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
-if-shell -b 'test $(uname) = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l fish"'
-
-set-option -g base-index 1
-
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'arcticicestudio/nord-tmux'
 run '~/.tmux/plugins/tpm/tpm'
