I like numbering tmux windows from 1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
-set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc'
+set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-jkkitalic,alacritty-256color:Tc'
 set-option -g default-terminal "tmux-256color"
+
+set-option -g base-index 1
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
