--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-jkkitalic,alacritty-256color:Tc'
+set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc'
 set-option -g default-terminal "tmux-256color"
 
 set-option -g base-index 1
@@ -7,5 +7,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+
+#
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g "window-style" "bg=default"
+set -g "window-active-style" "bg=default"
+
