--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,9 @@ set-option -g base-index 1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 #
