Make OneDark tmux transparent better

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-#
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g "window-style" "bg=default"
-set -g "window-active-style" "bg=default"
-
+set -g "window-style" "fg=#5c6370,bg=default"
+set -g "window-active-style" "fg=#aab2bf,bg=default"
