--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,15 +3,13 @@ set-option -g default-terminal "tmux-256color"
 
 set-option -g base-index 1
 
+if-shell "test -f ~/.tmux/base16-bright.tmux" "source ~/.tmux/base16-bright.tmux"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g "window-style" "fg=#5c6370,bg=default"
-set -g "window-active-style" "fg=#aab2bf,bg=default"
