tmux supports Alacritty's default TERM

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc'
+set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc,alacritty:Tc'
 set-option -g default-terminal "tmux-256color"
 
 set-option -g base-index 1
