Add current config.fish and tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,19 @@
-set-option -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc,alacritty-256color:Tc,alacritty:Tc'
+set-option -g terminal-overrides ',alacritty:Tc'
 set-option -g default-terminal "tmux-256color"
 
 set-option -g base-index 1
 
-if-shell "test -f ~/.tmux/base16-bright.tmux" "source ~/.tmux/base16-bright.tmux"
+run-shell "powerline-daemon -q"
+
+# OS X setup: 
+# Using https://github.com/PetrusZ/tmux-powerline-gruvbox-colorscheme
+# Powerline installed with pip3 install powerline-status
+if-shell 'uname | grep -q Darwin' 'source-file /usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+# Slackware setup:
+# Powerline installed with pip3 install powerline-status --user
+# Powerline tmux colorscheme set to solarized
+if-shell 'uname | grep -q Linux' 'source-file ~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
