--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g terminal-overrides ',alacritty:Tc,xterm-256color-italic:Tc'
+set-option -g terminal-overrides ',alacritty:Tc,xterm-256color-italic:Tc,xterm-256color:Tc'
 set-option -g default-terminal "tmux-256color"
 
 set-option -g base-index 1
