Add a new compton.conf

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,7 +1,8 @@
-menu-opacity = 0.75;
-shadow = true;
-fading = true;
-unredir-if-possible = true;
 backend = "glx";
+blur-method = "kawase";
+blur-strength = 3;
+daemon = true;
+blur-background-frame = true;
 no-dock-shadow = true;
-use-ewmh-active-win = true;
+clear-shadow = true;
+blur-background-exclude = "window_type = 'dock'";
