Add shadows to compton

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -5,4 +5,5 @@ daemon = true;
 blur-background-frame = true;
 no-dock-shadow = true;
 clear-shadow = true;
+shadow = true;
 blur-background-exclude = "window_type = 'dock'";
