Add fading to compton

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -6,4 +6,5 @@ blur-background-frame = true;
 no-dock-shadow = true;
 clear-shadow = true;
 shadow = true;
+fading = true;
 blur-background-exclude = "window_type = 'dock'";
