--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,4 +1,4 @@
-vf=@bwdif:!bwdif:parity=bff,@lb:!pp=lb
+vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
 profile=gpu-hq
 scale=ewa_lanczossharp
 vulkan-swap-mode=fifo
