--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,7 +1,2 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
-profile=gpu-hq
-scale=ewa_lanczossharp
-vulkan-swap-mode=fifo
-gpu-api=vulkan
-gpu-context=x11vk
-hwdec=nvdec-copy
+video-sync=display-resample
