--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
+include moonfly.conf
 font_family JetBrainsMono Nerd Font Mono
 allow_remote_control yes
-background_opacity 0.8
 disable_ligatures always
