Switch to sonokai

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,7 @@
-include moonfly.conf
 font_family JetBrainsMono Nerd Font Mono
 allow_remote_control yes
 disable_ligatures always
+
+# https://github.com/rsaihe/sonokai-kitty
+include sonokai-atlantis.conf
+
