Disable the Kitty terminal close confirmation

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,6 @@
+include catppuccin.conf
 font_family JetBrains Mono
 allow_remote_control yes
 disable_ligatures always
-background_opacity 0.8
+confirm_os_window_close 0
+# background_opacity 0.8
