--- a/cfg/.config/kitty/kitty.conf
+++ b/cfg/.config/kitty/kitty.conf
@@ -9,5 +9,5 @@ confirm_os_window_close 0
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
 
 # https://github.com/duganchen/git-commit-browser-for-kitty
-map ctrl+shift+p>g kitten hints --customize-processing git-hash-hints.py
-
+map ctrl+shift+p>h kitten hints --program @ --type regex --regex "\b([0-9a-f]{6}|[0-9a-f]{7}|[0-9a-f]{8}|[0-9a-f]{40})\b"
+map ctrl+shift+p>g kitten hints --program "launch --cwd=current git_show_diff" --type regex --regex "\b([0-9a-f]{6}|[0-9a-f]{7}|[0-9a-f]{8}|[0-9a-f]{40})\b"
