Buff mpv. Part 3.

--- a/cfg/.config/mpv/script-opts/uosc.conf
+++ b/cfg/.config/mpv/script-opts/uosc.conf
@@ -1,1 +1,2 @@
-../../../../subrepos/mpv/uosc/script-opts/uosc.conf
+# This is needed on my 4K display. I suppose we can comment this on or off as needed.
+ui_scale=2
