Use CatPuccin for everything

--- a/linux/.config/kitty/platform.conf
+++ b/linux/.config/kitty/platform.conf
@@ -1,9 +1,7 @@
-include OneDark.conf
-
 # https://github.com/kovidgoyal/kitty/issues/3284#issuecomment-822535459
 linux_display_server x11
 
 # I'm using this on GNOME with Blur My Shell.
 # The value is the default for VSCode GlassIt:
 # https://github.com/hikarin522/GlassIt-VSC
-background_opacity 0.86
+# background_opacity 0.86
