Set mpv according to Arch wiki

--- a/cfg/.config/mpv/mpv.conf
+++ b/cfg/.config/mpv/mpv.conf
@@ -1,1 +1,8 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
+profile=gpu-hq
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+video-sync=display-resample
+interpolation
+tscale=oversample
+hwdec=auto
