--- a/cfg/.config/mpv/mpv.conf
+++ b/cfg/.config/mpv/mpv.conf
@@ -1,8 +1,4 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
 profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-video-sync=display-resample
-interpolation
-tscale=oversample
 hwdec=auto
+vo=gpu
