UOSC settings for mpv

--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -7,3 +7,8 @@ gpu-api=vulkan
 # "Tearing, not vsync blocked."
 # I use Wayland, so this is the right option.
 vulkan-swap-mode=immediate
+
+# For uosc
+osc=no
+osd-bar=no
+border=no
