Allow Remote Control in Kitty

--- a/cfg/.config/kitty/kitty.conf
+++ b/cfg/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ include mocha.conf
 include platform.conf
 
 font_family JetBrains Mono
-# allow_remote_control yes
+allow_remote_control yes
 disable_ligatures always
 confirm_os_window_close 0
 
