--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -1,6 +1,9 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
 profile=gpu-hq
-hwdec=auto
+
+# https://github.com/mpv-player/mpv/issues/11739
+hwdec=vulkan
+
 vo=gpu-next
 
 gpu-api=vulkan
