Update mpv.conf for linux

--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -15,3 +15,8 @@ vulkan-swap-mode=immediate
 osc=no
 osd-bar=no
 border=no
+
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+
+video-sync=display-resample
