Tweak mpv Linux conf

--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -1,22 +1,16 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
+
 profile=gpu-hq
-
-# https://github.com/mpv-player/mpv/issues/11739
-hwdec=vulkan
-
+hwdec=auto
 vo=gpu-next
-
 gpu-api=vulkan
-# "Tearing, not vsync blocked."
-# I use Wayland, so this is the right option.
-vulkan-swap-mode=immediate
 
 # For uosc
 osc=no
 osd-bar=no
 border=no
 
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
+scale=ewa_lanczos
+scale-blur=0.981251
 
 video-sync=display-resample
