--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -1,7 +1,10 @@
 vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
 
 profile=gpu-hq
-hwdec=auto
+
+# Had issues with auto and vaapi
+hwdec=cuda
+
 vo=gpu-next
 gpu-api=vulkan
 
