--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -2,8 +2,8 @@ vf=@bwdif:!bwdif:parity=bff,@l5:!pp=l5
 
 profile=gpu-hq
 
-# Had issues with auto and vaapi
-hwdec=cuda
+# Had issues with vaapi and auto
+hwdec=vdpau
 
 vo=gpu-next
 gpu-api=vulkan
