Linux mpv starts fullscreen

--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -17,3 +17,6 @@ scale=ewa_lanczos
 scale-blur=0.981251
 
 video-sync=display-resample
+
+# All I do is press "f" immediately anyway...
+fullscreen=yes
