--- a/subrepos/mpv/uosc/.editorconfig
+++ b/subrepos/mpv/uosc/.editorconfig
@@ -1,83 +1,167 @@
-[*.lua]
-# see https://github.com/CppCXY/EmmyLuaCodeStyle
+[*]
+indent_style = tab
+indent_size = 4
+end_of_line = lf
+insert_final_newline = true
 
+[*.md]
+indent_style = space
+indent_size = 2
+
+# see https://github.com/CppCXY/EmmyLuaCodeStyle
+[*.lua]
 # [basic]
 
+# optional space/tab
 indent_style = tab
+# if indent_style is space, this is valid
+indent_size = 4
+# if indent_style is tab, this is valid
 tab_width = 4
 # none/single/double
 quote_style = single
-continuation_indent_size = 4
+
+continuation_indent = 4
+
+# this mean utf8 length , if this is 'unset' then the line width is no longer checked
+# this option decides when to chopdown the code
 max_line_length = 120
-# crlf/lf/cr/auto
+
+# optional crlf/lf/cr/auto, if it is 'auto', in windows it is crlf other platforms are lf
+# in neovim the value 'auto' is not a valid option, please use 'unset'
 end_of_line = lf
-detect_end_of_line = false
-insert_final_newline = true
 
-# [function]
+#  none/ comma / semicolon / only_kv_colon
+table_separator_style = comma
 
-# true/false/only_after_more_indention_statement/only_not_exist_cross_row_expression
-align_call_args = false
-align_function_define_params = true
-remove_expression_list_finish_comma = true
-# keep/remove/remove_table_only/remove_string_only/unambiguous_remove_string_only
+#optional keep/never/always/smart
+trailing_table_separator = smart
+
+# keep/remove/remove_table_only/remove_string_only
 call_arg_parentheses = keep
 
-# [table]
+detect_end_of_line = false
 
-# none/comma/semicolon
-table_separator_style = comma
-# keep/never/always/smart
-trailing_table_separator = smart
-# align equal signs in tables
-continuous_assign_table_field_align_to_equal_sign = false
-# if true "local t = { 1, 2, 3 }"
-keep_one_space_between_table_and_bracket = false
-
-# [statement]
-
-align_chained_expression_statement = false
-max_continuous_line_distance = 1
-# align equal signs in value assignments
-continuous_assign_statement_align_to_equal_sign = false
-if_condition_align_with_each_other = false
-local_assign_continuation_align_to_first_expression = false
-statement_inline_comment_space = 1
-
-# [indentation]
-
-# labels (e.g.::continue::) will not be intended
-label_no_indent = false
-# no indentation for do statement
-do_statement_no_indent = false
-# no indentation for conditions of an if statement when on new line
-if_condition_no_continuation_indent = false
-if_branch_comments_after_block_no_indent = false
+# this will check text end with new line
+insert_final_newline = true
 
 # [space]
+space_around_table_field_list = false
 
-# if true, t[#t+1] will not space wrapper '+'
-table_append_expression_no_space = false
-long_chain_expression_allow_one_space_after_colon = false
-remove_empty_header_and_footer_lines_in_function = true
+space_before_attribute = false
+
 space_before_function_open_parenthesis = false
+
+space_before_function_call_open_parenthesis = false
+
+space_before_closure_open_parenthesis = false
+
+# optional always/only_string/only_table/none
+# or true/false
+space_before_function_call_single_arg = always
+
 space_before_open_square_bracket = false
-# format like this "local t <const> = 1"
-keep_one_space_between_namedef_and_attribute = false
 
-# [row_layout]
-# Each can be: minLine:${n}, keepLine, keepLine:${n}, maxLine:${n}
+space_inside_function_call_parentheses = false
 
-keep_line_after_if_statement = keepLine
-keep_line_after_do_statement = keepLine
-keep_line_after_while_statement = keepLine
-keep_line_after_repeat_statement = keepLine
-keep_line_after_for_statement = keepLine
-keep_line_after_local_or_assign_statement = keepLine
-keep_line_after_function_define_statement = keepLine
-keep_line_after_expression_statement = keepLine
+space_inside_function_param_list_parentheses = false
 
-# [diagnostic]
-# creates a lot of warnings I can't do anything about so disable it is
+space_inside_square_brackets = false
 
-enable_check_codestyle = false
+# like t[#t+1] = 1
+space_around_table_append_operator = false
+
+ignore_spaces_inside_function_call = false
+
+space_before_inline_comment = 1
+
+# [operator space]
+space_around_math_operator = true
+
+space_after_comma = true
+
+space_after_comma_in_for_statement = true
+
+# true/false or none/always/no_space_asym
+space_around_concat_operator = true
+
+space_around_logical_operator = true
+
+# true/false or none/always/no_space_asym
+space_around_assign_operator = true
+
+# [align]
+
+align_call_args = false
+
+align_function_params = false
+
+align_continuous_assign_statement = false
+
+align_continuous_rect_table_field = false
+
+align_continuous_line_space = 2
+
+align_if_branch = false
+
+# option none / always / contain_curly/
+align_array_table = none
+
+align_continuous_similar_call_args = false
+
+align_continuous_inline_comment = false
+
+# option none / always / only_call_stmt
+align_chain_expr = none
+
+# [indent]
+
+never_indent_before_if_condition = false
+
+never_indent_comment_on_if_branch = true
+
+keep_indents_on_empty_lines = false
+
+# [line space]
+
+# The following configuration supports four expressions
+# keep
+# fixed(n)
+# min(n)
+# max(n)
+# for eg. min(2)
+
+line_space_after_if_statement = keep
+
+line_space_after_do_statement = keep
+
+line_space_after_while_statement = keep
+
+line_space_after_repeat_statement = keep
+
+line_space_after_for_statement = keep
+
+line_space_after_local_or_assign_statement = keep
+
+line_space_after_function_statement = keep
+
+line_space_after_expression_statement = keep
+
+line_space_after_comment = keep
+
+line_space_around_block = fixed(1)
+
+# [line break]
+break_all_list_when_line_exceed = false
+
+auto_collapse_lines = false
+
+break_before_braces = false
+
+# [preference]
+ignore_space_after_colon = false
+
+remove_call_expression_list_finish_comma = false
+
+# keep / always / same_line / repalce_with_newline
+end_statement_with_semicolon = keep
