--- a/subrepos/mpv/uosc/.vscode/settings.json
+++ b/subrepos/mpv/uosc/.vscode/settings.json
@@ -8,7 +8,8 @@
 	],
 	"Lua.diagnostics.disable": [
 		"lowercase-global",
-		"redefined-local"
+		"redefined-local",
+		"duplicate-set-field"
 	],
 	"Lua.diagnostics.globals": [
 		"mp"
