--- a/linux/.config/mpv/mpv.conf
+++ b/linux/.config/mpv/mpv.conf
@@ -6,7 +6,8 @@ profile=gpu-hq
 # hwdec=vdpau
 
 vo=gpu-next
-gpu-api=vulkan
+# This breaks on my current KDE desktop
+# gpu-api=vulkan
 
 # For uosc
 osc=no
