git subrepo pull subrepos/catppuccin/yazi
subrepo:
  subdir:   "subrepos/catppuccin/yazi"
  merged:   "043ffae"
upstream:
  origin:   "git@github.com:catppuccin/yazi.git"
  branch:   "main"
  commit:   "043ffae"
git-subrepo:
  version:  "0.4.9"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "4f60dd7"

--- a/subrepos/catppuccin/yazi/themes/latte/catppuccin-latte-sapphire.toml
+++ b/subrepos/catppuccin/yazi/themes/latte/catppuccin-latte-sapphire.toml
@@ -1,4 +1,4 @@
-[manager]
+[mgr]
 cwd = { fg = "#179299" }
 
 hovered         = { fg = "#eff1f5", bg = "#209fb5" }
@@ -12,10 +12,6 @@ marker_cut      = { fg = "#d20f39", bg = "#d20f39" }
 marker_marked   = { fg = "#179299", bg = "#179299" }
 marker_selected = { fg = "#209fb5", bg = "#209fb5" }
 
-tab_active   = { fg = "#eff1f5", bg = "#4c4f69" }
-tab_inactive = { fg = "#4c4f69", bg = "#bcc0cc" }
-tab_width    = 1
-
 count_copied   = { fg = "#eff1f5", bg = "#40a02b" }
 count_cut      = { fg = "#eff1f5", bg = "#d20f39" }
 count_selected = { fg = "#eff1f5", bg = "#209fb5" }
@@ -24,6 +20,10 @@ border_symbol = "│"
 border_style  = { fg = "#8c8fa1" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-latte.tmTheme"
+
+[tabs]
+active   = { fg = "#eff1f5", bg = "#4c4f69", bold = true }
+inactive = { fg = "#4c4f69", bg = "#bcc0cc" }
 
 [mode]
 normal_main = { fg = "#eff1f5", bg = "#209fb5", bold = true }
@@ -36,8 +36,8 @@ unset_main  = { fg = "#eff1f5", bg = "#dd7878", bold = true }
 unset_alt   = { fg = "#dd7878", bg = "#ccd0da"}
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 
 progress_label  = { fg = "#ffffff", bold = true }
 progress_normal = { fg = "#1e66f5", bg = "#bcc0cc" }
@@ -68,7 +68,7 @@ list       = {}
 btn_yes    = { reversed = true }
 btn_no     = {}
 
-[completion]
+[cmp]
 border = { fg = "#209fb5" }
 
 [tasks]
@@ -113,6 +113,12 @@ rules = [
 	{ name = "*", fg = "#4c4f69" },
 	{ name = "*/", fg = "#209fb5" }
 ]
+
+[spot]
+border = { fg = "#209fb5" }
+title  = { fg = "#209fb5" }
+tbl_cell = { fg = "#209fb5", reversed = true }
+tbl_col = { bold = true }
 
 [icon]
 files = [
