--- a/subrepos/catppuccin/yazi/themes/mocha/catppuccin-mocha-red.toml
+++ b/subrepos/catppuccin/yazi/themes/mocha/catppuccin-mocha-red.toml
@@ -1,4 +1,4 @@
-[manager]
+[mgr]
 cwd = { fg = "#94e2d5" }
 
 hovered         = { fg = "#1e1e2e", bg = "#f38ba8" }
@@ -12,10 +12,6 @@ marker_cut      = { fg = "#f38ba8", bg = "#f38ba8" }
 marker_marked   = { fg = "#94e2d5", bg = "#94e2d5" }
 marker_selected = { fg = "#f38ba8", bg = "#f38ba8" }
 
-tab_active   = { fg = "#1e1e2e", bg = "#cdd6f4" }
-tab_inactive = { fg = "#cdd6f4", bg = "#45475a" }
-tab_width    = 1
-
 count_copied   = { fg = "#1e1e2e", bg = "#a6e3a1" }
 count_cut      = { fg = "#1e1e2e", bg = "#f38ba8" }
 count_selected = { fg = "#1e1e2e", bg = "#f38ba8" }
@@ -24,6 +20,10 @@ border_symbol = "│"
 border_style  = { fg = "#7f849c" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-mocha.tmTheme"
+
+[tabs]
+active   = { fg = "#1e1e2e", bg = "#cdd6f4", bold = true }
+inactive = { fg = "#cdd6f4", bg = "#45475a" }
 
 [mode]
 normal_main = { fg = "#1e1e2e", bg = "#f38ba8", bold = true }
@@ -36,8 +36,8 @@ unset_main  = { fg = "#1e1e2e", bg = "#f2cdcd", bold = true }
 unset_alt   = { fg = "#f2cdcd", bg = "#313244"}
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 
 progress_label  = { fg = "#ffffff", bold = true }
 progress_normal = { fg = "#89b4fa", bg = "#45475a" }
@@ -68,7 +68,7 @@ list       = {}
 btn_yes    = { reversed = true }
 btn_no     = {}
 
-[completion]
+[cmp]
 border = { fg = "#f38ba8" }
 
 [tasks]
@@ -113,6 +113,12 @@ rules = [
 	{ name = "*", fg = "#cdd6f4" },
 	{ name = "*/", fg = "#f38ba8" }
 ]
+
+[spot]
+border = { fg = "#f38ba8" }
+title  = { fg = "#f38ba8" }
+tbl_cell = { fg = "#f38ba8", reversed = true }
+tbl_col = { bold = true }
 
 [icon]
 files = [
