--- a/subrepos/catppuccin/yazi/themes/frappe/catppuccin-frappe-green.toml
+++ b/subrepos/catppuccin/yazi/themes/frappe/catppuccin-frappe-green.toml
@@ -1,4 +1,4 @@
-[manager]
+[mgr]
 cwd = { fg = "#81c8be" }
 
 hovered         = { fg = "#303446", bg = "#a6d189" }
@@ -12,10 +12,6 @@ marker_cut      = { fg = "#e78284", bg = "#e78284" }
 marker_marked   = { fg = "#81c8be", bg = "#81c8be" }
 marker_selected = { fg = "#a6d189", bg = "#a6d189" }
 
-tab_active   = { fg = "#303446", bg = "#c6d0f5" }
-tab_inactive = { fg = "#c6d0f5", bg = "#51576d" }
-tab_width    = 1
-
 count_copied   = { fg = "#303446", bg = "#a6d189" }
 count_cut      = { fg = "#303446", bg = "#e78284" }
 count_selected = { fg = "#303446", bg = "#a6d189" }
@@ -24,6 +20,10 @@ border_symbol = "│"
 border_style  = { fg = "#838ba7" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-frappe.tmTheme"
+
+[tabs]
+active   = { fg = "#303446", bg = "#c6d0f5", bold = true }
+inactive = { fg = "#c6d0f5", bg = "#51576d" }
 
 [mode]
 normal_main = { fg = "#303446", bg = "#a6d189", bold = true }
@@ -36,8 +36,8 @@ unset_main  = { fg = "#303446", bg = "#eebebe", bold = true }
 unset_alt   = { fg = "#eebebe", bg = "#414559"}
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 
 progress_label  = { fg = "#ffffff", bold = true }
 progress_normal = { fg = "#8caaee", bg = "#51576d" }
@@ -68,7 +68,7 @@ list       = {}
 btn_yes    = { reversed = true }
 btn_no     = {}
 
-[completion]
+[cmp]
 border = { fg = "#a6d189" }
 
 [tasks]
@@ -113,6 +113,12 @@ rules = [
 	{ name = "*", fg = "#c6d0f5" },
 	{ name = "*/", fg = "#a6d189" }
 ]
+
+[spot]
+border = { fg = "#a6d189" }
+title  = { fg = "#a6d189" }
+tbl_cell = { fg = "#a6d189", reversed = true }
+tbl_col = { bold = true }
 
 [icon]
 files = [
