--- a/subrepos/catppuccin/yazi/themes/latte/catppuccin-latte-peach.toml
+++ b/subrepos/catppuccin/yazi/themes/latte/catppuccin-latte-peach.toml
@@ -1,4 +1,4 @@
-[manager]
+[mgr]
 cwd = { fg = "#179299" }
 
 hovered         = { fg = "#eff1f5", bg = "#fe640b" }
@@ -12,10 +12,6 @@ marker_cut      = { fg = "#d20f39", bg = "#d20f39" }
 marker_marked   = { fg = "#179299", bg = "#179299" }
 marker_selected = { fg = "#fe640b", bg = "#fe640b" }
 
-tab_active   = { fg = "#eff1f5", bg = "#4c4f69" }
-tab_inactive = { fg = "#4c4f69", bg = "#bcc0cc" }
-tab_width    = 1
-
 count_copied   = { fg = "#eff1f5", bg = "#40a02b" }
 count_cut      = { fg = "#eff1f5", bg = "#d20f39" }
 count_selected = { fg = "#eff1f5", bg = "#fe640b" }
@@ -24,6 +20,10 @@ border_symbol = "│"
 border_style  = { fg = "#8c8fa1" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-latte.tmTheme"
+
+[tabs]
+active   = { fg = "#eff1f5", bg = "#4c4f69", bold = true }
+inactive = { fg = "#4c4f69", bg = "#bcc0cc" }
 
 [mode]
 normal_main = { fg = "#eff1f5", bg = "#fe640b", bold = true }
@@ -36,8 +36,8 @@ unset_main  = { fg = "#eff1f5", bg = "#dd7878", bold = true }
 unset_alt   = { fg = "#dd7878", bg = "#ccd0da"}
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 
 progress_label  = { fg = "#ffffff", bold = true }
 progress_normal = { fg = "#1e66f5", bg = "#bcc0cc" }
@@ -68,7 +68,7 @@ list       = {}
 btn_yes    = { reversed = true }
 btn_no     = {}
 
-[completion]
+[cmp]
 border = { fg = "#fe640b" }
 
 [tasks]
@@ -113,6 +113,12 @@ rules = [
 	{ name = "*", fg = "#4c4f69" },
 	{ name = "*/", fg = "#fe640b" }
 ]
+
+[spot]
+border = { fg = "#fe640b" }
+title  = { fg = "#fe640b" }
+tbl_cell = { fg = "#fe640b", reversed = true }
+tbl_col = { bold = true }
 
 [icon]
 files = [
