--- a/subrepos/catppuccin/yazi/themes/macchiato/catppuccin-macchiato-green.toml
+++ b/subrepos/catppuccin/yazi/themes/macchiato/catppuccin-macchiato-green.toml
@@ -1,4 +1,4 @@
-[manager]
+[mgr]
 cwd = { fg = "#8bd5ca" }
 
 hovered         = { fg = "#24273a", bg = "#a6da95" }
@@ -12,10 +12,6 @@ marker_cut      = { fg = "#ed8796", bg = "#ed8796" }
 marker_marked   = { fg = "#8bd5ca", bg = "#8bd5ca" }
 marker_selected = { fg = "#a6da95", bg = "#a6da95" }
 
-tab_active   = { fg = "#24273a", bg = "#cad3f5" }
-tab_inactive = { fg = "#cad3f5", bg = "#494d64" }
-tab_width    = 1
-
 count_copied   = { fg = "#24273a", bg = "#a6da95" }
 count_cut      = { fg = "#24273a", bg = "#ed8796" }
 count_selected = { fg = "#24273a", bg = "#a6da95" }
@@ -24,6 +20,10 @@ border_symbol = "│"
 border_style  = { fg = "#8087a2" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-macchiato.tmTheme"
+
+[tabs]
+active   = { fg = "#24273a", bg = "#cad3f5", bold = true }
+inactive = { fg = "#cad3f5", bg = "#494d64" }
 
 [mode]
 normal_main = { fg = "#24273a", bg = "#a6da95", bold = true }
@@ -36,8 +36,8 @@ unset_main  = { fg = "#24273a", bg = "#f0c6c6", bold = true }
 unset_alt   = { fg = "#f0c6c6", bg = "#363a4f"}
 
 [status]
-separator_open  = ""
-separator_close = ""
+sep_left  = { open = "", close = "" }
+sep_right = { open = "", close = "" }
 
 progress_label  = { fg = "#ffffff", bold = true }
 progress_normal = { fg = "#8aadf4", bg = "#494d64" }
@@ -68,7 +68,7 @@ list       = {}
 btn_yes    = { reversed = true }
 btn_no     = {}
 
-[completion]
+[cmp]
 border = { fg = "#a6da95" }
 
 [tasks]
@@ -113,6 +113,12 @@ rules = [
 	{ name = "*", fg = "#cad3f5" },
 	{ name = "*/", fg = "#a6da95" }
 ]
+
+[spot]
+border = { fg = "#a6da95" }
+title  = { fg = "#a6da95" }
+tbl_cell = { fg = "#a6da95", reversed = true }
+tbl_col = { bold = true }
 
 [icon]
 files = [
