git subrepo pull subrepos/mpv/mpv-scripts
subrepo:
  subdir:   "subrepos/mpv/mpv-scripts"
  merged:   "b9e6374"
upstream:
  origin:   "git@github.com:Eisa01/mpv-scripts.git"
  branch:   "master"
  commit:   "b9e6374"
git-subrepo:
  version:  "0.4.9"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "4f60dd7"

--- a/subrepos/mpv/mpv-scripts/script-opts/SmartSkip.conf
+++ b/subrepos/mpv/mpv-scripts/script-opts/SmartSkip.conf
@@ -1,4 +1,4 @@
-######----Settings For SmartSkip 1.2----######
+######----Settings For SmartSkip 1.3.4#2----######
 ####------Script Settings-----####
 
 
@@ -19,7 +19,7 @@ min_skip_duration=0
 
 #--(0/#number). Maximum amount of seconds accepted to skip until the configured silence_duration.
 # (0 for disabled, or specify seconds)
-max_skip_duration=130
+max_skip_duration=180
 
 #--(yes/no). Press keybind again while silence-skip is active to cancel
 keybind_twice_cancel_skip=yes
@@ -109,7 +109,7 @@ skip_once=no
 # e.g.: categories=[ ["internal-chapters", "my-new-category>Part [AB]/Ending 1; another-category>Part C/Part D"], ["external-chapters", "idx->0/1/2/3"] ]
 # Syntax: category-name-1>chapter-name-1-slash-separated/chapter-name-2-slash-separated; lua patterns, each category is separated by semicolons
 # Predefined Category: (idx- followed by the chapter index / slash separated to autoskip based on index)
-categories=[ ["internal-chapters", "prologue>Prologue/^Intro; opening>^OP/ OP$/^Opening; ending>^ED/ ED$/^Ending; preview>Preview$"], ["external-chapters", "idx->0/2"] ]
+categories=[ ["internal-chapters", "prologue>Prologue/^Intro; opening>^OP/ OP$/^Opening; ending>^ED/ ED$/^Ending/Credits Start; preview>Preview$/Preview Start"], ["external-chapters", "idx->0/2"] ]
 
 #--(string) enables defined categories for autoskip
 # e.g: skip=opening;ending
@@ -124,35 +124,12 @@ categories=[ ["internal-chapters", "prologue>Prologue/^Intro; opening>^OP/ OP$/^
 
 skip=[ ["internal-chapters", "toggle;toggle_idx;opening;ending;preview"], ["external-chapters", "toggle;toggle_idx"] ] 
 
-####------Autoload Settings-------####
-#--(yes/no). Autoload files in the same directory into playlist
-autoload_playlist=yes
+#--(yes/no). yes turns exclusion into inclusion (whitelist), resulting in entries added in autoskip_exclusion to trigger autoskip
+invert_autoskip_exclusion=no
 
-#--(#number). Max entries for autoload * 2 when starting a file (before + after). 5000 is the maximum recommended value
-autoload_max_entries=5000
-
-#--(#number). Max directory stack for autoload when starting a file. 20 is the recommended value
-autoload_max_dir_stack=20
-
-#--(yes/no). Hidden files in the directory will be ignored
-ignore_hidden=yes
-
-#--(yes/no). Allow same type of extensions
-same_type=no
-
-#--(auto/recursive/lazy/ignore). Specify the directory mode for autoload
-directory_mode=auto
-
-#--(yes/no). Types that will be autoloaded
-images=yes
-videos=yes
-audio=yes
-
-#--(extension,). Add additional extensions to be autoloaded.
-# e.g.: additional_image_exts=bmp,vob,pxr
-additional_image_exts=
-additional_video_exts=
-additional_audio_exts=
+#--Paths / URLs / Websites / Files / Protocols / Extensions, that wont trigger autoskip
+#e.g.: autoskip_exclusion=["c:\\users\\eisa01\\desktop", "c:\\users\\eisa01\\desktop\\*", "c:\\temp\\naruto-01.mp4", "youtube.com", "https://dailymotion.com/", "avi", "https://www.youtube.com/watch?v=e8YBesRKq_U", ".jpeg", "magnet:", "https://", "ftp"]
+autoskip_exclusion=[""]
 
 ####------OSD Messages Settings-------####
 
@@ -161,7 +138,7 @@ additional_audio_exts=
 osd_duration=2500
 
 #-- (no-osd/osd-bar/osd-msg/osd-msg-bar). OSD message that will be shown when the script triggers an action
-seek_osd=osd-msg-bar
+silence_skip_osd=osd-msg-bar
 chapter_osd=osd-msg-bar
 autoskip_osd=osd-msg-bar
 
@@ -174,9 +151,6 @@ osd_msg=yes
 ####------Keybind Settings-------####
 #-- Add below (after a comma) any additional keybind you want to bind. Or change the letter inside the quotes to change the keybind
 # e.g.: ["ctrl+x"], e.g.2: ["atl+n", "n", "N"]
-
-#-- Enables or disables autoload during playback for the session
-toggle_autoload_keybind=[""]
 
 #-- Enables or disables Auto-Skip during playback for the session
 toggle_autoskip_keybind=["ctrl+."]
@@ -219,3 +193,6 @@ smart_prev_keybind=["<"]
 
 #-- Triggers silence skip to detect silence as per the configured parameters
 silence_skip_keybind=["?"]
+
+#-- Cancels silence skip while it is runnng
+cancel_silence_skip_keybind=["esc"]
